[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemy/EnemyBullet.gd" type="Script" id=1]
[ext_resource path="res://Mechanics/HitBox.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 2 )

[sub_resource type="CircleShape2D" id=3]
radius = 298.283

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, -0.901248, 0, 0, Vector2( 1, 0 ), -0.930705, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 1, 2, 1 )
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 20.0
gravity = Vector3( -80, 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 6 )
color = Color( 0.501961, 0.345098, 0.709804, 1 )

[node name="EnemyBullet" type="Area2D"]
collision_layer = 16
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.501961, 0.345098, 0.709804, 1 )
polygon = PoolVector2Array( -3, -3, 0, -2, 3, -3, 2, 0, 3, 3, 0, 2, -3, 3, -2, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="HitBox" parent="." instance=ExtResource( 3 )]
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 2 )

[node name="FindPlayer" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="FindPlayer"]
visible = false
shape = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -2, 0 )
amount = 20
explosiveness = 0.05
process_material = SubResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_PlayerBullet_body_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="FindPlayer" to="." method="_on_FindPlayer_body_entered"]

[editable path="HitBox"]
